--- a/src/Component/Hero/hero.css
+++ b/src/Component/Hero/hero.css
@@ -1,6 +1,6 @@
 .hero-main {
     background-image: url(../../Assets/hero.jpg);
-    	        background-image: linear-gradient(to right, rgba(0,0,0,0.5) 0%,rgba(0,0,0,0) 100%), url(../../Assets/hero.jpg);
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%), url(../../Assets/hero.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
