--- a/src/Component/Navbar/navbar.css
+++ b/src/Component/Navbar/navbar.css
@@ -158,6 +158,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        cursor: pointer;
     }
 
     .nav-item {
