--- a/src/Utils/cookieConsent.css
+++ b/src/Utils/cookieConsent.css
@@ -1,56 +1,67 @@
-.cookieContainer{
+.cookieContainer {
     position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+    bottom: 0px;
     background: #333;
     color: #fff;
     padding: 15px;
-    border-radius: 5px;
     z-index: 1000;
-    display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+}
+
+.cookie-icon-parent{
     text-align: center;
-    width: 90%;
-    max-width: 400px;
+    margin-bottom: 15px;
 }
 
-.cookie-text{
-    margin: 0 0 10px 0;
+.cookie-icon-parent svg{
+    font-size: 55px;
 }
 
-.acceptBtn{
-    background: #4CAF50;
+.cookie-heading {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.cookie-text {
+    margin: 0 0 15px 0;
+    text-align: center;
+}
+
+.acceptBtn {
+    background: var(--them-secondary);
     color: white;
     border: none;
     padding: 8px 15px;
     cursor: pointer;
-    border-radius: 5px;
     width: 100px;
 }
 
-.declineBtn{
+.declineBtn {
     background: #ff4d4d;
     color: white;
     border: none;
     padding: 8px 15px;
     cursor: pointer;
-    border-radius: 5px;
     width: 100px;
 }
 
-.cookie-btn-container{
+.cookie-btn-container {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     width: 100%;
     justify-content: center;
 }
 
-@media (min-width: 991px) {
-    .cookieContainer{
-        flex-direction: row;
-        max-width: 550px;
-        text-align: start;
+
+@media (max-width: 991px) {
+    .cookie-heading {
+        font-size: 20px;
+    }
+
+    .cookie-text {
+        font-size: 14px;
     }
 }
